<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81c784"
    tools:context=".MainActivity">


    <androidx.gridlayout.widget.GridLayout
        android:layout_width="330dp"
        android:layout_height="570dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/homeScreen"
            android:layout_width="165dp"
            android:layout_height="190dp"
            android:contentDescription="@string/homescreen"
            android:onClick="homeScreen"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/tic3Screen"
            android:layout_width="165dp"
            android:layout_height="190dp"
            android:contentDescription="@string/tictactoe3x3"
            android:onClick="tic3Screen"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/tic3by3icon" />

        <ImageButton
            android:id="@+id/tic4Screen"
            android:layout_width="165dp"
            android:layout_height="190dp"
            android:contentDescription="@string/tictactoe4x4"
            android:onClick="tic4Screen"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/tic4by4icon" />


        <ImageButton
            android:id="@+id/tic5Screen"
            android:layout_width="165dp"
            android:layout_height="190dp"
            android:contentDescription="@string/tictactoe5x5"
            android:onClick="tic5Screen"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/tic5by5icon" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="165dp"
            android:layout_height="190dp"
            android:contentDescription="@string/settings"
            android:onClick="settingsScreen"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/setting" />

        <ImageButton
            android:id="@+id/aboutus"
            android:layout_width="165dp"
            android:layout_height="190dp"
            android:contentDescription="@string/aboutus"
            android:onClick="aboutusScreen"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/aboutus" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>